# isogrid-houdini-sop

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.hipnc  test.cpp
houdini_sop/: CMakeLists.txt  SOP_IsoGrid.cpp  SOP_IsoGrid.h
isogrid/: CMakeLists.txt
isogrid/applet/: CMakeLists.txt
isogrid/applet/include/: applet.h  noise.h  typedef.h
isogrid/applet/src/: applet.cpp
isogrid/isogrid/: CMakeLists.txt
isogrid/isogrid/include/: WB_CubeGridExporter.h  WB_IsoGridCell.h  WB_IsoGridLine.h  WB_IsoGridSegment.h  WB_IsoHexGrid.h
isogrid/isogrid/src/: WB_CubeGridExporter.cpp  WB_IsoGridCell.cpp  WB_IsoGridLine.cpp  WB_IsoGridSegment.cpp  WB_IsoHexGrid.cpp
isogrid/isosystem/: CMakeLists.txt
isogrid/isosystem/include/: isogrid.h
isogrid/isosystem/src/: iso_applet.cpp  iso_applet.h  iso_system.cpp  iso_system.h  isogrid.cpp
